feat: markdown 支持公式渲染 Closes #7833

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       rel="stylesheet"
       href="/node_modules/@fortawesome/fontawesome-free/css/v4-shims.css"
     />
+    <link rel="stylesheet" href="/node_modules/katex/dist/katex.min.css" />
     <link rel="stylesheet" href="/node_modules/prismjs/themes/prism.css" />
     <link rel="stylesheet" href="/examples/doc.css" />
 
@@ -93,5 +94,10 @@
       const initialState = {};
       bootstrap(document.getElementById('root'), initialState);
     </script>
+    <script defer src="/node_modules/katex/dist/katex.min.js"></script>
+    <script
+      defer
+      src="/node_modules/katex/dist/contrib/auto-render.min.js"
+    ></script>
   </body>
 </html>
