fix: 修复 word 中没有 styles.xml 文件会导致报错问题 Closes #10154

--- a/packages/office-viewer/examples/word.html
+++ b/packages/office-viewer/examples/word.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>word viewer</title>
     <link rel="stylesheet" href="/examples/static/css/app.css" />
-    <link rel="stylesheet" href="../src/office.css" />
+    <link rel="stylesheet" href="../scss/office.scss" />
   </head>
   <body>
     <div class="columns">
